# prism

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  default.toml
.github/: dependabot.yml
benches/: prism_bench.rs
src/: com.rs  lib.rs  metrics.rs  protocol.rs  utils.rs
src/com/: meta.rs
src/protocol/: mc.rs  redis.rs
src/protocol/mc/: msg.rs
src/protocol/redis/: cmd.rs  resp.rs
src/proxy/: cluster.rs  standalone.rs
src/proxy/cluster/: back.rs  fetcher.rs  front.rs  init.rs  redirect.rs
src/proxy/standalone/: back.rs  front.rs  ketama.rs  ping.rs  reload.rs
src/utils/: crc.rs  notify.rs  thread.rs
