[package]
name = "prism-proxy"
version = "1.3.4"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/prism"
repository = "https://github.com/wayslog/prism"
documentation = "https://docs.rs/prism"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = [ "cache", "redis", "memcache", "twemproxy"]
edition="2024"

[[bin]]
name = "prism-proxy"
path = "bin/proxy.rs"

[lib]
name = "libprism"
path = "src/lib.rs"

[[bench]]
name="prism_bench"
harness = false

[dev-dependencies]
criterion = "0.2"

[dependencies]
byteorder = "1.3.2"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes="1.4.0"
lazy_static="1.1"
btoi="0.4"
futures= "0.3.28"
toml="0.7.3"
serde="1.0"
serde_derive="1.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
net2="0.2"
md5="0.7.0"
hashbrown = "0.15.4"
bitflags = "2.3.1"
aho-corasick = "1.0.1"
rand = "0.9.1"
clap = {version = "2.33.0", features = ["yaml"]}
get_if_addrs = "0.5.3"
prometheus =  "0.14.0"
actix-web =  "4.3.1"
sysinfo =  "0.29.2"
rayon = "1.7.0"
hotwatch = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
tokio-stream = "0.1.17"

[profile.release]
debug = true
lto = true
