[package]
name = "prism-proxy"
version = "0.1.0"
authors = ["agapple"]
edition = "2024"
exclude = [".github/*", ".idea/*", "imgs/*", "benches/*"]
description = "a proxy for redis"
repository = "https://github.com/Praying/prism"
license = "MIT"
keywords = ["proxy", "redis", "memcached", "cluster"]
categories = ["network-programming", "database"]
readme = "README.md"

[[bin]]
name = "prism-proxy"
path = "bin/proxy.rs"

[lib]
name = "libprism"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
chrono = "0.4"
clap = "2.33"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
memchr = "2.7"
prometheus = { version = "0.14", optional = true }
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
rand = "0.9"
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# for metrics
sysinfo = { version = "0.37", optional = true }
# for redis protocol
md5 = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
# New dependencies
tokio-stream = "0.1"
pin-project = "1.0"
actix-web = "4"
network-interface = "2.0.3"
aho-corasick = "1.0"
byteorder = "1.4"
hashbrown = "0.16"
net2 = "0.2"
btoi = "0.5"
hotwatch = "0.5.0"
bitflags = "2.9.4"
num_cpus = "1.17.0"


[features]
default = []
metrics = ["prometheus", "sysinfo"]
# jemalloc = ["tikv-jemallocator"]

[dev-dependencies]
# pretty_assertions = "0.6"
criterion = "0.7"
# jemallocator = { version = "0.3", features = ["profiling", "stats"] }
# pprof = { version = "0.3", features = ["flamegraph"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
